<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="14"
    tools:context="com.pawras.android.basketballclub.add_new.CreateCoach">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="#ffffff">

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_coach"
            android:textSize="20sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="8.58"
        android:fillViewport="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/sure_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/sure_name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/date_of_birth"
                android:inputType="datetime"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/address"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/contact_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/contact_number"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="center"
        android:weightSum="10">

        <Button
            android:id="@+id/create_coach"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="7"
            android:background="@drawable/button"
            android:text="@string/create_coach"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>